--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "echarts": "^5.4.3",
+    "vue": "^3.2.13",
+    "vue-axios": "^3.5.2",
+    "vue-echarts": "^6.6.2",
+    "vuetify": "^3.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
